@@ -1,4 +1,8 @@
 1.03   2025-10-18
+    [Features]
+    - Added jq-compatible --null-input (-n) option to jq-lite so filters can
+      run against null without providing input data.
+
     [Refactor]
     - Refactored JQ::Lite to delegate query parsing and filter execution to
       dedicated modules, keeping only orchestration logic in the main package.
